# augment-token-mng

./: .gitignore  Dockerfile.build  Dockerfile.cross  Dockerfile.dev  LICENSE  README.md  build.ps1  build.sh  docker-compose.yml  email-helper.html  index.html  package-lock.json  package.json  test_internal_browser.md  vite.config.js
.cunzhi-memory/: context.md  metadata.json  rules.md
.github/workflows/: build.yml  manual-build.yml  notify-telegram.yml  package-dispatch.yml  version-bump-and-tag.yml
docker/: build-all.sh  build.sh
src/: App.vue  email-helper.js  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: atm.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: augment_oauth.rs  augment_user_info.rs  bookmarks.rs  http_client.rs  http_server.rs  main.rs  oauth.rs  outlook_manager.rs  proxy_config.rs  proxy_helper.rs  storage.rs  user.rs
src-tauri/src/database/: config.rs  connection.rs  migrations.rs  mod.rs
src-tauri/src/storage/: dual_storage.rs  local_storage.rs  mod.rs  postgres_storage.rs  traits.rs
src/components/: BookmarkManager.vue  CreditUsageChart.vue  CreditUsageModal.vue  CreditUsageStats.vue  DatabaseConfig.vue  EmailDetails.vue  EmailHelper.vue  EmailManager.vue  EmailViewer.vue  ExternalLinkDialog.vue  NotificationItem.vue  NotificationManager.vue  OutlookManager.vue  ProxyConfig.vue  SyncStatus.vue  TokenCard.vue  TokenForm.vue  TokenGenerator.vue  TokenList.vue  UpdateBanner.vue
src/locales/: en-US.js  index.js  zh-CN.js
